--- a/Images/BaseInterceptionOnS_4^5(m=4).tex
+++ b/Images/BaseInterceptionOnS_4^5(m=4).tex
@@ -1,175 +1,175 @@
-% Created by tikzDevice version 0.10.1 on 2017-11-24 11:28:25
+% Created by tikzDevice version 0.10.1 on 2018-06-27 15:02:47
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
-\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (361.35,216.81);
+\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (346.90,216.81);
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (346.90,216.81);
 \end{scope}
 \begin{scope}
-\path[clip] ( 76.92, 57.31) rectangle (355.85,211.31);
+\path[clip] ( 37.27, 31.53) rectangle (341.40,211.31);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] ( 76.92, 57.31) rectangle (355.85,211.31);
+\path[fill=fillColor] ( 37.27, 31.53) rectangle (341.40,211.31);
 \definecolor{drawColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92, 75.98) --
-	(355.85, 75.98);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27, 53.32) --
+	(341.40, 53.32);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,117.98) --
-	(355.85,117.98);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27,102.35) --
+	(341.40,102.35);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,159.98) --
-	(355.85,159.98);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27,151.38) --
+	(341.40,151.38);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,201.98) --
-	(355.85,201.98);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27,200.41) --
+	(341.40,200.41);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92, 96.98) --
-	(355.85, 96.98);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27, 77.84) --
+	(341.40, 77.84);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92,138.98) --
-	(355.85,138.98);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27,126.87) --
+	(341.40,126.87);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92,180.98) --
-	(355.85,180.98);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27,175.90) --
+	(341.40,175.90);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 57.31) --
-	( 97.33,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 31.53) --
+	( 59.52,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (131.35, 57.31) --
-	(131.35,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 96.61, 31.53) --
+	( 96.61,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (165.36, 57.31) --
-	(165.36,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.70, 31.53) --
+	(133.70,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (199.38, 57.31) --
-	(199.38,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.79, 31.53) --
+	(170.79,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (233.39, 57.31) --
-	(233.39,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (207.88, 31.53) --
+	(207.88,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (267.41, 57.31) --
-	(267.41,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.96, 31.53) --
+	(244.96,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (301.42, 57.31) --
-	(301.42,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (282.05, 31.53) --
+	(282.05,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (335.44, 57.31) --
-	(335.44,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (319.14, 31.53) --
+	(319.14,211.31);
 \definecolor{drawColor}{RGB}{0,0,0}
 \definecolor{fillColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 97.33, 64.31) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 59.52, 39.70) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (131.35,110.98) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 96.61, 94.18) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (165.36,157.65) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (133.70,148.66) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (199.38,157.65) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (170.79,148.66) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (233.39,157.65) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (207.88,148.66) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (267.41,157.65) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (244.96,148.66) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (301.42,204.31) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (282.05,203.14) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (335.44, 64.31) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (319.14, 39.70) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 64.31) --
-	(131.35,110.98) --
-	(165.36,157.65) --
-	(199.38,157.65) --
-	(233.39,157.65) --
-	(267.41,157.65) --
-	(301.42,204.31) --
-	(335.44, 64.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 39.70) --
+	( 96.61, 94.18) --
+	(133.70,148.66) --
+	(170.79,148.66) --
+	(207.88,148.66) --
+	(244.96,148.66) --
+	(282.05,203.14) --
+	(319.14, 39.70);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97, 86.65) {0.3};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32, 74.81) {0.3};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97,128.65) {0.4};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32,123.84) {0.4};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97,170.65) {0.5};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32,172.87) {0.5};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17, 96.98) --
-	( 76.92, 96.98);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52, 77.84) --
+	( 37.27, 77.84);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17,138.98) --
-	( 76.92,138.98);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52,126.87) --
+	( 37.27,126.87);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17,180.98) --
-	( 76.92,180.98);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52,175.90) --
+	( 37.27,175.90);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 54.56) --
-	( 97.33, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 28.78) --
+	( 59.52, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (131.35, 54.56) --
-	(131.35, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 96.61, 28.78) --
+	( 96.61, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (165.36, 54.56) --
-	(165.36, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.70, 28.78) --
+	(133.70, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (199.38, 54.56) --
-	(199.38, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.79, 28.78) --
+	(170.79, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (233.39, 54.56) --
-	(233.39, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (207.88, 28.78) --
+	(207.88, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (267.41, 54.56) --
-	(267.41, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.96, 28.78) --
+	(244.96, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (301.42, 54.56) --
-	(301.42, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (282.05, 28.78) --
+	(282.05, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (335.44, 54.56) --
-	(335.44, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (319.14, 28.78) --
+	(319.14, 31.53);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 97.33, 31.70) {1};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 59.52, 20.52) {$1$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (131.35, 31.70) {2};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 96.61, 20.52) {$2$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (165.36, 31.70) {3};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (133.70, 20.52) {$3$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (199.38, 31.70) {4};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (170.79, 20.52) {$4$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (233.39, 31.70) {5};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (207.88, 20.52) {$5$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (267.41, 31.70) {6};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (244.96, 20.52) {$6$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (301.42, 31.70) {c};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (282.05, 20.52) {$c$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (335.44, 31.70) {*};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (319.14, 20.52) {$*$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (216.39,  5.50) {\bfseries Node};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (189.33,  7.44) {Node, $i$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 26.20,134.31) {\bfseries Probability};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,121.42) {Probability, $w(i)$};
 \end{scope}
 \end{tikzpicture}
