--- a/Images/NavieInterceptionOnS_4^5(m=4).tex
+++ b/Images/NavieInterceptionOnS_4^5(m=4).tex
@@ -1,213 +1,213 @@
-% Created by tikzDevice version 0.10.1 on 2017-11-24 11:28:26
+% Created by tikzDevice version 0.10.1 on 2018-06-27 15:02:49
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
-\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (361.35,216.81);
+\path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (346.90,216.81);
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (346.90,216.81);
 \end{scope}
 \begin{scope}
-\path[clip] ( 76.92, 57.31) rectangle (355.85,211.31);
+\path[clip] ( 37.27, 31.53) rectangle (341.40,211.31);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] ( 76.92, 57.31) rectangle (355.85,211.31);
+\path[fill=fillColor] ( 37.27, 31.53) rectangle (341.40,211.31);
 \definecolor{drawColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92, 73.47) --
-	(355.85, 73.47);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27, 50.39) --
+	(341.40, 50.39);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,106.42) --
-	(355.85,106.42);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27, 88.86) --
+	(341.40, 88.86);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,139.37) --
-	(355.85,139.37);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27,127.33) --
+	(341.40,127.33);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,172.33) --
-	(355.85,172.33);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27,165.80) --
+	(341.40,165.80);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 76.92,205.28) --
-	(355.85,205.28);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.27,204.27) --
+	(341.40,204.27);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92, 89.94) --
-	(355.85, 89.94);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27, 69.62) --
+	(341.40, 69.62);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92,122.90) --
-	(355.85,122.90);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27,108.09) --
+	(341.40,108.09);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92,155.85) --
-	(355.85,155.85);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27,146.56) --
+	(341.40,146.56);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 76.92,188.80) --
-	(355.85,188.80);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27,185.03) --
+	(341.40,185.03);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 57.31) --
-	( 97.33,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 31.53) --
+	( 59.52,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (131.35, 57.31) --
-	(131.35,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 96.61, 31.53) --
+	( 96.61,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (165.36, 57.31) --
-	(165.36,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.70, 31.53) --
+	(133.70,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (199.38, 57.31) --
-	(199.38,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.79, 31.53) --
+	(170.79,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (233.39, 57.31) --
-	(233.39,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (207.88, 31.53) --
+	(207.88,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (267.41, 57.31) --
-	(267.41,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.96, 31.53) --
+	(244.96,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (301.42, 57.31) --
-	(301.42,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (282.05, 31.53) --
+	(282.05,211.31);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (335.44, 57.31) --
-	(335.44,211.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (319.14, 31.53) --
+	(319.14,211.31);
 \definecolor{drawColor}{RGB}{0,0,0}
 \definecolor{fillColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 97.33, 64.31) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 59.52, 39.70) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (131.35,100.93) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 96.61, 82.45) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (165.36,137.54) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (133.70,125.19) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (199.38,137.54) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (170.79,125.19) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (233.39,137.54) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (207.88,125.19) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (267.41,137.54) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (244.96,125.19) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (301.42,174.16) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (282.05,167.94) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (335.44, 64.31) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (319.14, 39.70) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 64.31) --
-	(131.35,100.93) --
-	(165.36,137.54) --
-	(199.38,137.54) --
-	(233.39,137.54) --
-	(267.41,137.54) --
-	(301.42,174.16) --
-	(335.44, 64.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 39.70) --
+	( 96.61, 82.45) --
+	(133.70,125.19) --
+	(170.79,125.19) --
+	(207.88,125.19) --
+	(244.96,125.19) --
+	(282.05,167.94) --
+	(319.14, 39.70);
 \definecolor{drawColor}{RGB}{255,0,0}
 \definecolor{fillColor}{RGB}{255,0,0}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 97.33, 68.62) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 59.52, 44.73) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (131.35, 88.01) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 96.61, 67.36) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (165.36,107.39) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (133.70, 89.99) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (199.38, 68.62) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (170.79, 44.73) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (233.39, 68.62) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (207.88, 44.73) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (267.41,184.93) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (244.96,180.51) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (301.42,204.31) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (282.05,203.14) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (335.44, 68.62) circle (  1.96);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (319.14, 44.73) circle (  1.96);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 68.62) --
-	(131.35, 88.01) --
-	(165.36,107.39) --
-	(199.38, 68.62) --
-	(233.39, 68.62) --
-	(267.41,184.93) --
-	(301.42,204.31) --
-	(335.44, 68.62);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 44.73) --
+	( 96.61, 67.36) --
+	(133.70, 89.99) --
+	(170.79, 44.73) --
+	(207.88, 44.73) --
+	(244.96,180.51) --
+	(282.05,203.14) --
+	(319.14, 44.73);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97, 79.61) {0.3};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32, 66.59) {0.3};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97,112.57) {0.4};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32,105.06) {0.4};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97,145.52) {0.5};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32,143.53) {0.5};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 71.97,178.47) {0.6};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 32.32,182.00) {0.6};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17, 89.94) --
-	( 76.92, 89.94);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52, 69.62) --
+	( 37.27, 69.62);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17,122.90) --
-	( 76.92,122.90);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52,108.09) --
+	( 37.27,108.09);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17,155.85) --
-	( 76.92,155.85);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52,146.56) --
+	( 37.27,146.56);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.17,188.80) --
-	( 76.92,188.80);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.52,185.03) --
+	( 37.27,185.03);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 97.33, 54.56) --
-	( 97.33, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.52, 28.78) --
+	( 59.52, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (131.35, 54.56) --
-	(131.35, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 96.61, 28.78) --
+	( 96.61, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (165.36, 54.56) --
-	(165.36, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (133.70, 28.78) --
+	(133.70, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (199.38, 54.56) --
-	(199.38, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.79, 28.78) --
+	(170.79, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (233.39, 54.56) --
-	(233.39, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (207.88, 28.78) --
+	(207.88, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (267.41, 54.56) --
-	(267.41, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.96, 28.78) --
+	(244.96, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (301.42, 54.56) --
-	(301.42, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (282.05, 28.78) --
+	(282.05, 31.53);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (335.44, 54.56) --
-	(335.44, 57.31);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (319.14, 28.78) --
+	(319.14, 31.53);
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 97.33, 31.70) {1};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 59.52, 20.52) {$1$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (131.35, 31.70) {2};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 96.61, 20.52) {$2$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (165.36, 31.70) {3};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (133.70, 20.52) {$3$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (199.38, 31.70) {4};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (170.79, 20.52) {$4$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (233.39, 31.70) {5};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (207.88, 20.52) {$5$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (267.41, 31.70) {6};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (244.96, 20.52) {$6$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (301.42, 31.70) {c};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (282.05, 20.52) {$c$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (335.44, 31.70) {*};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (319.14, 20.52) {$*$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at (216.39,  5.50) {\bfseries Node};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (189.33,  7.44) {Node, $i$};
 \end{scope}
 \begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (361.35,216.81);
+\path[clip] (  0.00,  0.00) rectangle (346.90,216.81);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  3.00] at ( 26.20,134.31) {\bfseries Probability};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,121.42) {Probability, \textcolor{red}{$P(\bm{\pi}_{N}(\frac{2}{17},\frac{6}{17}),i)$}};
 \end{scope}
 \end{tikzpicture}
